<resources>

    <string name="app_name">TomaDeMedidas</string>
    <string name="content_name">Content Name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="editar_cliente">Editar Cliente</string>
    <string name="cliente">Cliente</string>
    <string name="nuevo_cliente">Nuevo Cliente</string>
    <string name="proyecto">Proyecto</string>
    <string name="agregar_cliente">Agregar Cliente</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="nombre">Nombre</string>
    <string name="guardar">Guardar</string>
    <string name="accesorios_especiales">Accesorios Especiales</string>
    <string name="accesorios_muro">Accesorios Muro</string>
    <string name="accesorios_techo">Accesorios Techo</string>
    <string name="agente">Agente</string>
    <string name="crear_proyecto">Crear Proyecto</string>
    <string name="formato">Formato</string>
    <string name="texto_ej_tornillos">Texto Ej: Tornillos.</string>
    <string name="texto_ej_tornillos_esp">Texto Ej: Tornillos esp.</string>
    <string name="texto_ej_pijas">Texto Ej: Pijas.</string>
    <string name="texto_ej_remodelacion">TEXTO EJ: REMODELACIÓN.</string>
    <string name="solicitar_al_area_de_ventas">Solicitar al área de ventas</string>
    <string name="pedido_sap">Pedido Sap</string>
    <string name="nombre_proyecto">Nombre Proyecto</string>
    <string name="toma_de_medidas">Toma de Medidas</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar">Iniciar</string>
    <string name="recordarme">Recordarme</string>
    <string name="usuario">Usuario</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="numero_de_habitaciones">Número de habitaciones</string>
    <string name="area">Área</string>
    <string name="ancho">Ancho</string>
    <string name="alto">Alto</string>
    <string name="copete">Copete</string>
    <string name="proyecciones">Proyecciones</string>
    <string name="fijacion">Fijación</string>
    <string name="comentarios">Comentarios</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="observaciones">Observaciones</string>
    <string name="log_in">Log In</string>
    <string name="description">Descriptión</string>
    <string name="modificar_cliente">Modificar Cliente</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="registrar_dispositivo">Registrar Dispositivo</string>
    <string name="proyecto_hoteleria">Proyecto Hoteleria</string>
    <string name="proyecto_cama">Proyecto Cama</string>
    <string name="proyecto_residencial">Proyecto Residencial</string>
    <string name="proyecto_galeria">Proyecto Galeria</string>
    <string name="proyecto_especial">Proyecto Especial</string>
    <string name="modificar_proyecto">Modificar Proyecto</string>
    <string name="ej_metros">Metros. Ej: 2.5</string>
    <string name="ej_edificio">Texto. Ej: A1, Triángulo</string>
    <string name="ej_habitacion">Texto. Ej: A1, 1</string>
    <string name="ej_piso">Número. Ej: A1, 2</string>
    <string name="ej_hojas">Metros. Ej: 1</string>
    <string name="observacion_hoteleria">Texto. Ej: La fijación sera a muro</string>
    <string name="observacion_residencial">Texto. Ej: La fijación sera a techo</string>
    <string name="observacion_cama">Texto. Ej: Las patas de la cama miden 10cm.</string>

    <string-array name="spinnerItems">
        <item>Seleccione un Formato:</item>
        <item>Cama</item>
        <item>Especial</item>
        <item>Galeria</item>
        <item>Hoteleria</item>
        <item>Residencial</item>
    </string-array>

    <string-array name="empty_array">
        <item>No se han cargado datos</item>
    </string-array>
</resources>
