<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:configChanges="orientation|keyboardHidden|screenSize"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                style="@style/TextView"
                android:text="@string/cliente"
                android:textAppearance="@style/TextAppearance.AppCompat"/>

            <Spinner
                android:id="@+id/spinner_cliente"
                android:entries="@array/empty_array"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overlapAnchor="false"/>

            <TextView
                android:id="@+id/textView10"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                style="@style/TextView"
                android:text="@string/formato"
                android:textAppearance="@style/TextAppearance.AppCompat"/>

            <Spinner
                android:id="@+id/spinner_formato"
                android:entries="@array/spinnerItems"
                android:overlapAnchor="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textView11"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                style="@style/TextView"
                android:text="@string/agente"
                android:textAppearance="@style/TextAppearance.AppCompat"/>

            <Spinner
                android:id="@+id/spinner_agente"
                android:entries="@array/empty_array"
                android:overlapAnchor="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView12"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                style="@style/TextView"
                android:text="@string/nombre_proyecto"
                android:textAppearance="@style/TextAppearance.AppCompat"/>

            <EditText
                android:id="@+id/c_proyecto_nombre"
                style="@style/EditText"
                android:hint="@string/texto_ej_remodelacion"
                android:digits="abcdefghijklmnñopqrstuvwxyz ABCDEFGHIJKLMNÑOPQRSTUVWXYZ
                -/()1234567890."
                android:maxLength="100"/>

            <TextView
                android:id="@+id/textView14"
                style="@style/TextView"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/accesorios_muro"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <EditText
                android:id="@+id/proyecto_accesorios_muro"
                style="@style/EditText"
                android:maxLength="500"
                android:hint="@string/texto_ej_pijas"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView15"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                style="@style/TextView"
                android:text="@string/accesorios_techo"
                android:textAppearance="@style/TextAppearance.AppCompat"/>

            <EditText
                android:id="@+id/proyecto_accesorios_techo"
                style="@style/EditText"
                android:maxLength="500"
                android:hint="@string/texto_ej_tornillos"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView16"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                style="@style/TextView"
                android:text="@string/accesorios_especiales"
                android:textAppearance="@style/TextAppearance.AppCompat"/>

            <EditText
                android:id="@+id/proyecto_accesorios_especiales"
                style="@style/EditText"
                android:ems="10"
                android:maxLength="500"
                android:hint="@string/texto_ej_tornillos_esp"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView17"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                style="@style/TextView"
                android:text="@string/pedido_sap"
                android:textAppearance="@style/TextAppearance.AppCompat"/>

            <EditText
                android:id="@+id/proyecto_pedido_sap"
                android:hint="@string/solicitar_al_area_de_ventas"
                android:digits="1234567890-."
                android:maxLength="50"
                android:inputType="number"
                style="@style/EditText"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgFoto"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="50"
                        android:contentDescription="Foto"
                        android:maxHeight="200dp"
                        android:maxWidth="200dp"
                        android:minHeight="200dp"
                        android:minWidth="200dp"
                        android:src="@android:drawable/ic_menu_camera"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <Button
                        android:id="@+id/TomarFoto"
                        style="@style/ButtonStyle2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/tomar_foto" />
                    <!--android:onClick="onFotoClick"-->

                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/Guardar"
                style="@style/ButtonStyle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/guardar"
                android:onClick="onSaveClickProyectos"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>