<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:checkable="false"
        android:title="@string/cliente"
        android:id="@+id/Cliente">
        <menu>
            <item
                android:id="@+id/NuevoCliente"
                android:title="@string/nuevo_cliente" />
            <item
                android:id="@+id/EditarCliente"
                android:title="@string/editar_cliente" />
        </menu>
    </item>
    <item
        android:checkable="false"
        android:title="Proyecto"
        android:id="@+id/Proyecto">
        <menu>
            <item
                android:id="@+id/NuevoProyecto"
                android:title="Nuevo Proyecto" />
            <item
                android:id="@+id/EditarProyecto"
                android:title="Editar Proyecto" />
        </menu>
    </item>
    <item
        android:id="@+id/cerrarSesion"
        android:title="Cerrar Sesión" />
</menu>
