<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/numero_de_habitaciones"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="14sp" />

        <EditText
            android:id="@+id/txt_numero_habitaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="20"
            android:digits="AÁBCDEÉFGHIÍJKLMNÑOÓPQRSTUÚÜVWXYZ
            -.,()1234567890"
            android:inputType="numberDecimal"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/a"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/txt_A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:digits=".1234567890"
            android:textStyle="bold"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/b"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/txt_B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:digits=".1234567890"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/c"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/txt_C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:digits=".1234567890"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/d"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/txt_D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:digits=".1234567890"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/e"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/txt_E"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:digits=".1234567890"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/f"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/txt_F"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:digits=".1234567890"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/g"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/txt_G"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:digits=".1234567890"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/observaciones"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/txt_observaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:maxLength="500"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/Guardar"
            style="@style/ButtonStyle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:text="@string/guardar"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>