<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:text="@string/nombre"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txt_cliente_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:digits="aábcdeéfghiíjklmnñoópqrstuúüvwxyz AÁBCDEÉFGHIÍJKLMNÑOÓPQRSTUÚÜVWXYZ-.,()
        1234567890"
        android:maxLength="50"
        android:inputType="textPersonName" />
    <!-- ABCDEFGHIJKLMNÑOPQRSTUVWXYZ -->
    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:text="@string/telefono"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txt_cliente_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:digits="1234567890-."
        android:maxLength="20"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:text="@string/direccion"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txt_cliente_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="100"
        android:inputType="text" />

    <Button
        android:id="@+id/Guardar"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSaveClickClientes"
        android:text="@string/guardar" />

</LinearLayout>