<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            style="@style/TextCrear"
            android:paddingBottom="5dp"
            android:paddingTop="20dp"
            android:textSize="16sp"
            android:text="@string/usuario"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <EditText
            android:id="@+id/txt_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textAutoComplete"
            android:digits="abcdefghijklmnñopqrstuvwxyz ABCDEFGHIJKLMNÑOPQRSTUVWXYZ
            -1234567890"
            android:maxLength="255"
            android:paddingBottom="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/textView3"
            android:paddingBottom="5dp"
            android:paddingTop="20dp"
            style="@style/TextCrear"
            android:text="@string/contrase_a"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recordarme" />

        <Button
        android:id="@+id/button"
        android:paddingTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle2"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:onClick="onSaveClickIniciar"
        android:text="@string/iniciar" />

    </LinearLayout>
</LinearLayout>